# matd04-20192

./: README.md
codigo/integerheaptests/: CMakeLists.txt  README.md  commands.md
codigo/integerheaptests/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc
codigo/integerheaptests/src/: CMakeLists.txt  main.cpp
codigo/integerheaptests/src/integerheap/: CMakeLists.txt  IntegerHeap.cpp  IntegerHeap.h  main.cpp
codigo/integerheaptests/test/: CMakeLists.txt
codigo/integerheaptests/test/src/: integerheap_tests.cpp
estudo_dirigido/: estudodirigido-btree.md  estudodirigido-hashing.md  estudodirigido-ordenacaoexterna.md  hashTables-en.md  hashTables-pt.md
exercicios/: Heap.h  estudodirigido-btree.md  lista04.md  lista05.md  p1-questoes.md
integerlisttest/: README.md
integerlisttest/src/integerlist/: IntegerList.cpp  IntegerList.h
integerlisttest/test/src/: integerlist_tests.cpp
tutorial/: analisedealgoritmos.md  arvores.md  btrees.md  filas.md  hashing.md  ordenacaoexterna.md  pilhas.md
